fixed issued with game over alert before last question and game over message not showing final score correctly

--- a/assets/css/css2.css
+++ b/assets/css/css2.css
@@ -7,15 +7,28 @@ body {
 
 .game-area {
     text-align: center;
-    height: 16px;
+    /* height: 16px;
     margin: auto 0;
     padding-left: 20%;
-    padding-top: 10%;
-
+    padding-top: 5%;
+    width: 75%; */
+    width: 75%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 1%;
 }
 
 .game-container {
     border: 3px double black;
+    width: 75%;
+
+   margin: 0 auto;
+    
+    /* position: absolute;
+    top: 50%;
+    left: 50%;
+    bring your own prefixes
+    transform: translate(-50%, -50%); */
 
 }
 
@@ -26,6 +39,11 @@ body {
     padding: 5px;
     border: 3px double black;
 
+}
+
+footer {
+    text-align: center;
+    /* position: absolute; */
 }
 
 #display {
@@ -55,8 +73,8 @@ body {
 }
 
 .options {
-    width: 15vw;
-    font-size: larger;
+    width: 24%;
+    font-size: large;
     background-color: lightskyblue;
     border-radius: 25%;
     border: 3px double black;
@@ -65,7 +83,7 @@ body {
 }
 
 .options:hover {
-    background-color: rgb(133, 133, 37);
+    /* background-color: #858525; */
 }
 
 .reset {
